--- a/README
+++ b/README
@@ -2,3 +2,8 @@ php bin/console make:migration
 php bin/console doctrine:migrations:migrate
 
 php bin/console doctrine:fixtures:load
+
+
+CREATE DATABASE retourenverwaltung CHARACTER SET utf8mb4 COLLATE utf8mb4_unicode_ci;
+CREATE USER 'retourenverwaltung'@'localhost' IDENTIFIED BY 'Retourenverwaltung123--';
+GRANT ALL PRIVILEGES ON * . * TO 'retourenverwaltung'@'localhost';
